2004-10-05  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/vrf/vrfswq.c: fixed memory leak.

	* README: updated to reflect use of configure. 

=============================================================================

2004-10-04  Frank Warmerdam  <warmerdam@pobox.com>

	* Release OGDI 3.1.3.

2004-03-29  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/rpf/utils.c: Check for FSDEVG field is present in 
	TOC file.  As per Bug 917678.

2004-03-26  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/rpf/rpf.c: Fixed computation of nbfeature in 
	dyn_SelectRegion() as it is unduely sensitive to rounding error issues.
	As per Bug 924250 from Mark Aubin. 

2004-02-19  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/vrf/vrf.c: fixed serious bug in releaseAllLayers(). 
	Only every other layer was effectively being released resulting in 
	major leaks of file handles and other resources in application 
	accessing multiple layers at once and not explicitly releasing them.

	* vpflib/musedir.c: added some include files to avoid warnings in
	unix builds.

	* ogdi/c-api/client.c: ecs_DestroyServer() now does an ecs_CleanUp() on
	cln_dummy_result to avoid noisy memory leak. 

	* ogdi/drivers/vrf/feature.c: fixed leak of edge_rec.coords memory
	in the bug 741854 fix in vrf_get_ring_coords().

2004-02-18  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_info/ogdi_info.c: use ecs_CleanUp() to free contents
	of result from cln_DestroyClient().  Minor memory leak. 

	* vpflib/strfunc.c: leftjust() - avoid use of strcpy() for overlapping
	string moves.  Reported by Craig Bruce, verified with valgrind. 

=============================================================================

2003-12-15  Frank Warmerdam  <warmerdam@pobox.com>

	* Release OGDI 3.1.2.

	* ogdi/include/ecs_util.h: updated version to 3.1.2.

	* config/darwin.cfg: new configuration file for MacOS 10.3.

	* vpflib/ coorgeom.c, vpfprim.c, vpftable.h, xvt.h: