@@ -1,3 +1,8 @@
+2004-10-19  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* ogdi/drivers/vrf/object.c: Fixed memory leak for line layers with
+	an attribute query in effect (primList) as reported by Jerome Waymel.
+
 2004-10-05  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* ogdi/drivers/vrf/vrfswq.c: fixed memory leak.
